# internal/transport/rest/handler/auth.go
@@ -10,7 +10,7 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
-// 	* `POST /auth/register` 					— регистрация пользователя;
+// 	* `POST /auth/register` 	— регистрация пользователя;
 // @Summary Register
 // @Tags Auth
 // @Description create account
@@ -26,19 +26,24 @@ import (
 func (h *Handler) Register() echo.HandlerFunc {
 
 	return func(c echo.Context) error {
-		var input core.User
+		pkg.InfoPrint("transport", "process", "new request on /auth/register")
 
-		if err := c.Bind(&input); err != nil {
-			pkg.ErrPrint("transport", http.StatusBadRequest, err)
-			return errResponse(c, http.StatusBadRequest, "bind body failure")
-		}
+		var input core.User
+		// todo обработку fetch запроса с данными в формате json
+		//? if err := c.Bind(&input); err != nil {
+		//? 	pkg.ErrPrint("transport", http.StatusBadRequest, err)
+		//? 	return errResponse(c, http.StatusBadRequest, "bind body failure")
+		//? }
+		input.Login = c.FormValue("login")
+		input.Password = c.FormValue("password")
+		fmt.Println("INPUT ", input)
 		if err := c.Validate(input); err != nil {
 			pkg.ErrPrint("transport", http.StatusBadRequest, err)
 			return errResponse(c, http.StatusBadRequest, "validate failure")
 		}
 
 		// * авторизация
-		i, err := h.services.Authorization.CreateUser(input)
+		_, err := h.services.Authorization.CreateUser(input)
 		if err != nil {
 			if strings.Contains(err.Error(), "login busy") {
 				pkg.ErrPrint("transport", http.StatusConflict, err)
@@ -49,7 +54,6 @@ func (h *Handler) Register() echo.HandlerFunc {
 			return errResponse(c, http.StatusInternalServerError, "internal server error")
 		}
 
-		fmt.Print(i)
 		// * аутентификация
 		token, err := h.services.Authorization.GenerateToken(input.Login, input.Password)
 		if err != nil {
@@ -58,8 +62,8 @@ func (h *Handler) Register() echo.HandlerFunc {
 			return errResponse(c, http.StatusInternalServerError, "internal server error")
 		}
 
-		c.Response().Header().Set("Authorization", "Bearer "+token)
-		return c.NoContent(http.StatusOK)
+		c.SetCookie(writeCookie("/", "Token", "Bearer "+token))
+		return c.Redirect(http.StatusSeeOther, "/api/sessions/static/extract")
 	}
 }
 
@@ -83,11 +87,15 @@ type signInInput struct {
 // @Router /auth/login [post]
 func (h *Handler) Login() echo.HandlerFunc {
 	return func(c echo.Context) error {
+		pkg.InfoPrint("transport", "process", "new request on /auth/login")
 		var input signInInput
-		if err := c.Bind(&input); err != nil {
-			pkg.ErrPrint("transport", http.StatusBadRequest, err)
-			return errResponse(c, http.StatusBadRequest, "bind body failure")
-		}
+		// todo обработку fetch запроса с данными в формате json
+		//? if err := c.Bind(&input); err != nil {
+		//? 	pkg.ErrPrint("transport", http.StatusBadRequest, err)
+		//? 	return errResponse(c, http.StatusBadRequest, "bind body failure")
+		//? }
+		input.Login = c.FormValue("login")
+		input.Password = c.FormValue("password")
 		if err := c.Validate(input); err != nil {
 			pkg.ErrPrint("transport", http.StatusBadRequest, err)
 			return errResponse(c, http.StatusBadRequest, "validate failure")
@@ -102,7 +110,8 @@ func (h *Handler) Login() echo.HandlerFunc {
 			pkg.ErrPrint("transport", http.StatusInternalServerError, err)
 			return errResponse(c, http.StatusInternalServerError, "internal server error")
 		}
-		c.Response().Header().Set("Authorization", "Bearer "+token)
-		return c.NoContent(http.StatusOK)
+
+		c.SetCookie(writeCookie("/", "Token", "Bearer "+token))
+		return c.Redirect(http.StatusMovedPermanently, "/api/sessions/static/extract")
 	}
 }
